--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                         <i class="fa fa-2x fa-bars"></i>
                     </button>
-                    <a class="navbar-brand page-scroll" href="http://brittanychiang.com/">
+                    <a class="navbar-brand page-scroll" href="https://riyapatel135.github.io/personalportfolio/">
                         <img src="img/logo-transparent-white-30pt.png" />Riya Patel</a>
                 </div>
                 <div class="collapse navbar-collapse navbar-main-collapse">
@@ -50,7 +50,7 @@
                         <li><a class="page-scroll" href="#about">About</a></li>
                         <li><a class="page-scroll" href="#services">Passion</a></li>
                         <li><a class="page-scroll" href="#experience">Experience</a></li>
-                        <li><a class="page-scroll" href="#portfolio">Work</a></li>
+                        <li><a class="page-scroll" href="#portfolio">Project</a></li>
                         <li><a class="page-scroll" href="#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -126,7 +126,7 @@
                             <h2>Experience</h2>
                         </div>
                         <div class="col-sm-offset-1 col-xs-12 col-sm-6 col-md-6 skills-section wp3">
-                            <h3 style="margin-bottom: 0px;">CVS</h3>
+                            <h3 style="margin-bottom: 0px;"><strong>CVS</strong></h3>
                             <h3 style="margin-bottom: 0px;">Shift Supervisor - Lancaster, SC | Oct 2023 - Present</h3>
                             <ul style="font-family: 'Lato', sans-serif; font-size: 16px; font-weight: 300; min-width: auto;">
                                 <li>Work effectively with store management and store crews</li>
@@ -134,7 +134,7 @@
                                 <li>Effectively communicate information both to and from store management and crews</li>
                                 <li>Assist customers with their questions, problems and complaints</li>
                             </ul>
-                            <h3 style="margin-bottom: 0px;">ADP Consultants. Inc.</h3>
+                            <h3 style="margin-bottom: 0px;"><strong>ADP Consultants. Inc.</strong></h3>
                             <h3 style="margin-bottom: 0px;">Intern - Washington, DC | Jun 2023 - Aug 2023</h3>
                             <ul style="font-family: 'Lato', sans-serif; font-size: 16px; font-weight: 300; min-width: auto;">
                                 <li>Assisted in conducting site inspections and quality control checks for over 1.8-million-dollar projects for low-income housing</li>
@@ -143,14 +143,14 @@
 	                    	    <li>Perform walk-throughs with subcontractors and inspectors to ensure adherence to specifications according to the law and the state</li>
                                 <li>Work on AutoCad 2-D prints of ongoing site projects</li>
                             </ul>
-                            <h3 style="margin-bottom: 0px;">Burbee Place</h3>
+                            <h3 style="margin-bottom: 0px;"><strong>Burbee Place</strong></h3>
                             <h3 style="margin-bottom: 0px;">Childcare Worker - Lancaster, SC | Jun 2022 - Aug 2022</h3>
                             <ul style="font-family: 'Lato', sans-serif; font-size: 16px; font-weight: 300; min-width: auto;">
                                 <li>Oversee and administer group learning activities, encourage equal participation, and offer specialized attention based on parent and teacher recommendations</li>
                                 <li>Maintain eight-hour supervision of groups ranging between 20 and 50 children</li>
                                 <li>Provide a safe, healthy, nurturing environment to all children in the daycare and their families</li>
                             </ul>
-                            <h3 style="margin-bottom: 0px;">Domino's Pizza</h3>
+                            <h3 style="margin-bottom: 0px;"><strong>Domino's Pizza</strong></h3>
                             <h3 style="margin-bottom: 0px;">Cashier - Lancaster, SC | Jul 2020 - Aug 2021</h3>
                             <ul style="font-family: 'Lato', sans-serif; font-size: 16px; font-weight: 300; min-width: auto;">
                                 <li>Recorded customer orders by answering phone or taking information in person</li>
@@ -159,7 +159,7 @@
                                 <li>Maintaining high standards of customer service during high-volume, fast-paced operations</li>
                                 <li>Operated the drive-through window and sales register quickly and efficiently</li>
                             </ul>
-                            <h3 style="margin-bottom: 0px;">BAPS Shri Swaminarayan Mandir</h3>
+                            <h3 style="margin-bottom: 0px;"><strong>BAPS Shri Swaminarayan Mandir</strong></h3>
                             <h3 style="margin-bottom: 0px;">Audio Visual Team Member, Youth Group Leader - Charlotte, NC | Apr 2018 - Present</h3>
                             <ul style="font-family: 'Lato', sans-serif; font-size: 16px; font-weight: 300; min-width: auto;">
                                 <li>Set up all audio and visual equipment for large scheduled events and regular Sunday meetings. This includes: projectors, microphones, speakers, amplifiers, audio sound mixer control panel, and displays</li>
@@ -168,7 +168,7 @@
                                 <li>Direct Weekly youth meetings, special group events and overnight excursions</li>
                                 <li>Work with temple leadership, parents, and volunteers to establish clear goals and guidelines for temple youth</li>
                             </ul>
-                            <h3 style="margin-bottom: 0px;">Medical Univerisity of South Carolina</h3>
+                            <h3 style="margin-bottom: 0px;"><strong>Medical Univerisity of South Carolina</strong></h3>
                             <h3 style="margin-bottom: 0px;">Volunteer - Lancaster, SC | Jul 2019 - Aug 2019</h3>
                             <ul style="font-family: 'Lato', sans-serif; font-size: 16px; font-weight: 300; min-width: auto;">
                                 <li>Organized files of terminated employees</li>
@@ -180,7 +180,7 @@
                         </div>
                         <div class="col-xs-12 col-sm-offset-1 col-sm-4 col-md-offset-1 col-md-3 employment wp3">
                             <div class="row">
-                                <h3>Some technologies I've worked with:</h3>
+                                <h3>Programming languages and technologies I have worked with:</h3>
                                 <a href="https://riyapatel135.github.io/personalportfolio/" target="_blank">
                                     <img id="nu-logo" src="img/skills/html.png" alt="HTML" />
                                 </a>
@@ -240,7 +240,7 @@
             <div class="container">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">What I've Done</h2>
-                    <h5 class="coming-soon">(more coming soon)</h5>
+                    <h5 class="coming-soon">(Click on picture to learn more!)</h5>
                 </div>
                 <div class="row portfolio-row">
                     <div class="portfolio-item-wrapper wp5">
