--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         <section id="portfolio">
             <div class="container">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">What I've Done</h2>
+                    <h2 class="section-heading">TracerBot</h2>
                     <h5 class="coming-soon">(Click on picture to learn more!)</h5>
                 </div>
                 <div class="row portfolio-row">
