--- a/index.html
+++ b/index.html
@@ -236,7 +236,6 @@
         </section>
         <!-- /Section: Resume -->
         <!-- Section: Portfolio -->
-         <!-- Section: Portfolio -->
         <section id="portfolio">
             <div class="container">
                 <div class="col-lg-12 text-center">
@@ -244,7 +243,7 @@
                     <h5 class="coming-soon">(Click on picture to learn more!)</h5>
                 </div>
                 <div class="row portfolio-row">
-                    <div class="portfolio-item-wrapper wp5">
+                    <!--<div class="portfolio-item-wrapper wp5"> -->
                         <div class="portfolio-item" data-toggle="modal" href="#Tracerbot">
                             <div class="portfolio-overlay"></div>
                             <div class="links">
