--- a/index.html
+++ b/index.html
@@ -243,14 +243,14 @@
                     <h5 class="coming-soon">(Click on picture to learn more!)</h5>
                 </div>
                 <div class="row portfolio-row">
-                    <!--<div class="portfolio-item-wrapper wp5"> -->
+                    <div class="portfolio-item-wrapper wp5"> 
                         <div class="portfolio-item" data-toggle="modal" href="#Tracerbot">
                             <div class="portfolio-overlay"></div>
                             <div class="links">
                                 <a class="image-link"><i class="fa fa-search-plus"></i></a>
                                 <!-- <a href="https://google.com" target="_blank"><i class="fa fa-link"></i></a> -->
                             </div>
-                            <img src="img/tracerbot1.png" alt="image">
+                            <img class="img-responsive img-centered" src="img/tracerbot1.png" alt="image">
                             <div class="portfolio-info">
                                 <h3>Tracerbot</h3>
                             </div>
