--- a/index.html
+++ b/index.html
@@ -243,6 +243,19 @@
                     <h5 class="coming-soon">(Click on picture to learn more!)</h5>
                 </div>
                 <div class="row portfolio-row">
+                    <div class="portfolio-item-wrapper wp5">
+                        <div class="portfolio-item" data-toggle="modal" href="#courseSourceModal">
+                            <div class="portfolio-overlay"></div>
+                            <div class="links">
+                                <a class="image-link"><i class="fa fa-search-plus"></i></a>
+                                <!-- <a href="https://google.com" target="_blank"><i class="fa fa-link"></i></a> -->
+                            </div>
+                            <img src="img/CourseSource.png" alt="image">
+                            <div class="portfolio-info">
+                                <h3>CourseSource</h3>
+                            </div>
+                        </div>
+                    </div>
                     <div class="portfolio-item-wrapper wp5"> 
                         <div class="portfolio-item" data-toggle="modal" href="#Tracerbot">
                             <div class="portfolio-overlay"></div>
@@ -255,6 +268,17 @@
                                 <h3>Tracerbot</h3>
                             </div>
                         </div>
+                    </div>
+            <div class="portfolio-item-wrapper wp5">
+                <div class="portfolio-item" data-toggle="modal" href="#webdevModal">
+                    <div class="portfolio-overlay"></div>
+                    <div class="links">
+                        <a class="image-link"><i class="fa fa-search-plus"></i></a>
+                        <!-- <a href="https://google.com" target="_blank"><i class="fa fa-link"></i></a> -->
+                    </div>
+                    <img src="img/webdev-home.png" alt="image">
+                    <div class="portfolio-info">
+                        <h3>Web Dev Homepage</h3>
                     </div>
                 </div>
             </div>
