--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                                 <a class="image-link"><i class="fa fa-search-plus"></i></a>
                                 <!-- <a href="https://google.com" target="_blank"><i class="fa fa-link"></i></a> -->
                             </div>
-                            <img src="img/CourseSource.png" alt="image">
+                            <img src="img/IMG_1154.png" alt="image">
                             <div class="portfolio-info">
                                 <h3>CourseSource</h3>
                             </div>
@@ -276,7 +276,7 @@
                         <a class="image-link"><i class="fa fa-search-plus"></i></a>
                         <!-- <a href="https://google.com" target="_blank"><i class="fa fa-link"></i></a> -->
                     </div>
-                    <img src="img/webdev-home.png" alt="image">
+                    <img src="img/IMG_1514.png" alt="image">
                     <div class="portfolio-info">
                         <h3>Web Dev Homepage</h3>
                     </div>
@@ -291,15 +291,13 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        <h4 class="modal-title">CourseSource</h4>
-                        <h6 class="modal-title-description">Web App</h6>
+                        <h4 class="modal-title">TracerBot</h4>
+                        <h6 class="modal-title-description">Project</h6>
                     </div>
                     <div class="modal-body">
                         <p>
-                            <img class="img-responsive img-centered" src="img/CourseSource.png" alt="">
+                            <img class="img-responsive img-centered" src="img/IMG_1154.png" alt="">
                         </p>
-                        <p class="modal-description">CourseSource is a web application that was built with the MEAN stack for my web development class. I wanted to build this web app to help Northeastern Students have a better experience and more functionalities while browsing the courses offered at Northeastern, especially during registration season. </br>I'm sure many Northeastern students would agree with me that our student portal is in need of a major upgrade, and this web app is just a small example of what our student portal could be like.</p>
-                        <p class="visit"><a href="http://webdevspring2016-chiangbrittany.rhcloud.com/project/client/#/login" target="_blank" id="visit-btn">Visit Site</a> or <a href="https://github.com/bchiang7/WebDevSpring2016/tree/master/public/project" target="_blank" id="visit-btn">View Source</a></p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -341,17 +339,17 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        <h4 class="modal-title">Web Development Homepage</h4>
-                        <h6 class="modal-title-description">Landing Page</h6>
+                        <h4 class="modal-title">TracerBot</h4>
+                        <h6 class="modal-title-description">Project</h6>
                     </div>
                     <div class="modal-body">
                         <p>
-                            <img class="img-responsive img-centered" src="img/webdev-home.png" alt="">
+                            <img class="img-responsive img-centered" src="img/IMG_1514.png" alt="">
                         </p>
-                        <p class="modal-description">This was a very simple landing page I made for my web development class, hosted on Openshift. It contains a small blurb and the various links required by the professor.</p>
+                        <p class="modal-description">
                         <Br>
-                        <p class="modal-description"><strong>Note:</strong> The live assignment is not working due to having to remove functionality from the assignment to make my final project run smoothly.</p>
-                        <p class="visit"><a href="http://webdevspring2016-chiangbrittany.rhcloud.com/" target="_blank" id="visit-btn">Visit Site</a></p>
+                        <p class="modal-description">
+                        <p class="visit"><a href="" target="_blank" id="visit-btn">Visit Site</a></p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
