--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                             </div>
                             <img src="img/IMG_1154.png" alt="image">
                             <div class="portfolio-info">
-                                <h3>CourseSource</h3>
+                                <h3>TracerBot</h3>
                             </div>
                         </div>
                     </div>
@@ -278,7 +278,7 @@
                     </div>
                     <img src="img/IMG_1514.png" alt="image">
                     <div class="portfolio-info">
-                        <h3>Web Dev Homepage</h3>
+                        <h3>TracerBot</h3>
                     </div>
                 </div>
             </div>
