--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
     <meta name="author" content="Riya Patel" />
     <meta name="description" content="Web developer, UX Enthusiast, and everything in between." />
     <meta property="og:description" content="Web developer, UX Enthusiast, and everything in between." />
-    <!--<meta prefix="og: http://ogp.me/ns#" property="og:image" content="http://brittanychiang.com/img/social-image.png" /> -->
     <meta property="og:image:type" content="image/png" />
     <meta property="og:title" content="Riya Patel's Personal Website" />
-    <!--<meta property="og:url" content="http://brittanychiang.com/" /> -->
     <meta property="og:type" content="website" />
     <link rel="shortcut icon" href="img/logo-transparent-00009C.png">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
@@ -285,7 +283,7 @@
 
         </section>
         <!--************************** PORTFOLIO MODALS **************************-->
-        <!-- CourseSource MODAL -->
+        <!-- TracerBot MODAL -->
         <div class="modal fade" id="courseSourceModal" tabindex="-1" role="dialog" aria-labelledby="courseSourceModal" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -333,7 +331,7 @@
                 </div>
             </div>
         </div>
-        <!-- Web Dev Homepage MODAL -->
+        <!-- Tracerbot MODAL -->
         <div class="modal fade" id="webdevModal" tabindex="-1" role="dialog" aria-labelledby="fontipsumsModal" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -349,7 +347,7 @@
                         <p class="modal-description">
                         <Br>
                         <p class="modal-description">
-                        <p class="visit"><a href="" target="_blank" id="visit-btn">Visit Site</a></p>
+                        <p class="visit"><a href="" target="_blank" id="visit-btn"></a></p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
