--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                                 <a class="image-link"><i class="fa fa-search-plus"></i></a>
                                 <!-- <a href="https://google.com" target="_blank"><i class="fa fa-link"></i></a> -->
                             </div>
-                            <img src="img/IMG_1154.png" alt="image">
+                            <img src="img/tracerbot3.png" alt="image">
                             <div class="portfolio-info">
                                 <h3>TracerBot</h3>
                             </div>
@@ -274,7 +274,7 @@
                         <a class="image-link"><i class="fa fa-search-plus"></i></a>
                         <!-- <a href="https://google.com" target="_blank"><i class="fa fa-link"></i></a> -->
                     </div>
-                    <img src="img/IMG_1514.png" alt="image">
+                    <img src="img/tracerbot2.png" alt="image">
                     <div class="portfolio-info">
                         <h3>TracerBot</h3>
                     </div>
