--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             <img src="img/headshott.jpg" id="prof-pic" />
                             <p>
                                 Hey! My name is Riya, I'm a passionate individual who finds joy in coding and technology, while also exploring the world of politics. I'm currently a student at the
-                                <a href="https://sc.edu//" target="_blank">University of South Carolina, Lancaster</a> pursuing a degree in <a href="https://sc.edu/study/colleges_schools/engineering_and_computing/academics/undergraduate_programs/computer_science/index.php" target="_blank">computer science</a> with a minor in political science. I aspire toward a career that will allow me to channel my creativity through crafting beautiful software and engaging experiences. 
+                                <a href="https://sc.edu//" target="_blank">University of South Carolina</a> pursuing a degree in <a href="https://sc.edu/study/colleges_schools/engineering_and_computing/academics/undergraduate_programs/computer_science/index.php" target="_blank">computer science</a> with a minor in political science. I aspire toward a career that will allow me to channel my creativity through crafting beautiful software and engaging experiences. 
                                 <br>
                                 <br> Outside of academics, you'll often find me hitting the pavement for a refreshing run, reading, or listening to true crime podcasts and documentaries. 
                             </p>
@@ -125,7 +125,7 @@
                         </div>
                         <div class="col-sm-offset-1 col-xs-12 col-sm-6 col-md-6 skills-section wp3">
                             <h3 style="margin-bottom: 0px;"><strong>CVS</strong></h3>
-                            <h3 style="margin-bottom: 0px;">Shift Supervisor - Lancaster, SC | Oct 2023 - Present</h3>
+                            <h3 style="margin-bottom: 0px;">Shift Supervisor - Lancaster, SC & Columbia, SC | Oct 2023 - Present</h3>
                             <ul style="font-family: 'Lato', sans-serif; font-size: 16px; font-weight: 300; min-width: auto;">
                                 <li>Work effectively with store management and store crews</li>
                                 <li>Supervise the store's crew through assigning, directing and following up of all activities</li>
