--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                             <div class="col-md-12">
                                 <h2>Check out my resume!</h2>
                                 <div id="resume-button">
-                                    <a class="resume-btn wp4" href="Riya Patel Resume.pdf" target="_blank">Grab A Copy</a>
+                                    <a class="resume-btn wp4" href="Riya Patel Resume1.pdf" target="_blank">Grab A Copy</a>
                                 </div>
                             </div>
                         </div>
